fixed a small bug caused by calling editor.focus() which causes quill to reset its selection index

--- a/MathBlots.css
+++ b/MathBlots.css
@@ -24,12 +24,12 @@
     /*width: 1px; !*default width*!*/
 }
 
-/*debugger;*/
+/* ;*/
 /*let completer_dom_node = editor.container.getElementsByClassName("ace_autocomplete")[0] //TODO refactor this*/
 
 /*
 
-                                                                                   debugger;*/
+                                                                                    ;*/
 
 #editor-container {
     /*display: none!important;*/
